--- a/v0/app/src/main/res/anim/fadein.xml
+++ b/v0/app/src/main/res/anim/fadein.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<alpha xmlns:android="http://schemas.android.com/apk/res/android"
-       android:interpolator="@android:anim/accelerate_interpolator"
-       android:fromAlpha="0.0" android:toAlpha="1.0" android:duration="2000" />
+<set xmlns:android="http://schemas.android.com/apk/res/android">
+    <fade>
+
+    </fade>
+    <alpha
+            android:duration="@android:integer/config_mediumAnimTime"
+            android:fromAlpha="0.0"
+            android:toAlpha="1.0" >
+
+        <targets>
+
+        </targets>
+
+    </alpha>
+</set>
