--- a/v0/app/src/main/res/layout/activity_home.xml
+++ b/v0/app/src/main/res/layout/activity_home.xml
@@ -12,16 +12,22 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".ui.home.HomeActivity">
+            tools:context=".ui.MainActivity">
 
-        <fragment
-                android:id="@+id/nav_host_fragment"
-                android:name="androidx.navigation.fragment.NavHostFragment"
+        <FrameLayout
+                android:id="@+id/content_root"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                app:navGraph="@navigation/nav_home"
-                app:defaultNavHost="true" />
+                android:layout_height="match_parent">
+
+            <fragment
+                    android:id="@+id/nav_host_fragment"
+                    android:name="androidx.navigation.fragment.NavHostFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    app:navGraph="@navigation/nav_home"
+                    app:defaultNavHost="true" />
+        </FrameLayout>
 
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
