--- a/v0/app/src/main/res/layout/activity_login.xml
+++ b/v0/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
                 android:layout_marginEnd="24dp"
                 android:layout_marginStart="24dp"
                 android:src="@drawable/icon_logo_512"
-                android:contentDescription="@string/login_icon"
+                android:contentDescription="@string/cd_logo"
                 android:transitionName="transition_logo"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +45,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
-                    android:hint="@string/prompt_email"
+                    android:hint="@string/email"
                     android:maxLines="1"
                     android:singleLine="true"
                     android:imeOptions="actionNext" />
@@ -69,10 +69,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
-                    android:hint="@string/prompt_password"
+                    android:hint="@string/password"
                     android:maxLines="1"
                     android:imeActionId="6"
-                    android:imeActionLabel="@string/action_sign_in_short"
+                    android:imeActionLabel="@string/sign_in"
                     android:imeOptions="actionDone"
                     android:singleLine="true" />
 
@@ -85,7 +85,7 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginStart="8dp"
                 android:backgroundTint="@color/primary_dark"
-                android:text="@string/action_sign_in_short"
+                android:text="@string/sign_in"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -95,7 +95,7 @@
 
         <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_sign_up"
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
