--- a/v0/app/src/main/res/layout/fragment_start.xml
+++ b/v0/app/src/main/res/layout/fragment_start.xml
@@ -4,7 +4,7 @@
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
-                                                   tools:context=".ui.home.StartFragment">
+                                                   tools:context=".ui.session.setup.StartFragment">
 
     <ImageView
             android:id="@+id/header_start"
@@ -19,7 +19,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/textView2" />
+            app:layout_constraintBottom_toTopOf="@+id/textView2" />
 
     <TextView
             android:id="@+id/textView2"
@@ -34,23 +34,22 @@
             android:textColor="@color/secondary_text"
             android:textAlignment="center"
             android:textAppearance="@style/Widget.MaterialComponents.Button"
-            app:layout_constraintVertical_bias="0.4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
 
-    <Button
+    <ubb.license.david.monumentalv0.ui.FlatButton
             android:id="@+id/button_start"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
-            android:backgroundTint="@color/primary"
-            android:text="@string/button_ready"
+            android:visibility="visible"
+            app:text="@string/ready"
+            android:transitionName="bottomButtonTransition"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent">
+
+    </ubb.license.david.monumentalv0.ui.FlatButton>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
