--- a/v0/app/src/main/res/values/colors.xml
+++ b/v0/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <!--Main color palette-->
     <color name="primary">#3F51B5</color>
+    <color name="primary_opaque">#403F51B5</color>
     <color name="primary_dark">#303F9F</color>
     <color name="primary_light">#C5CAE9</color>
     <color name="accent">#FF5252</color>
