--- a/v0/app/src/main/res/layout/activity_login.xml
+++ b/v0/app/src/main/res/layout/activity_login.xml
@@ -158,4 +158,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <include layout="@layout/progress_overlay" />
+
 </FrameLayout>
