--- a/v0/app/src/main/res/layout/activity_main.xml
+++ b/v0/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.drawerlayout.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.SplashScreenActivity">
+        android:fitsSystemWindows="true"
+        tools:openDrawer="start">
 
-    <TextView
-            android:id="@+id/label_app"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".ui.MainActivity">
+
+        <FrameLayout
+                android:id="@+id/content_root"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <fragment
+                    android:id="@+id/nav_host_fragment"
+                    android:name="androidx.navigation.fragment.NavHostFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    app:navGraph="@navigation/nav_home"
+                    app:defaultNavHost="true" />
+
+            <include layout="@layout/progress_overlay" />
+
+        </FrameLayout>
+
+        <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                style="@style/TransparentActionBar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize" />
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="36sp"
-            android:text="@string/app_name"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            android:layout_gravity="start"
             android:visibility="visible"
-            app:layout_constraintVertical_bias="0.92"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:headerLayout="@layout/nav_header_home" app:menu="@menu/activity_home_drawer" />
 
-    <ImageView
-            android:id="@+id/logo_splash"
-            android:layout_width="256dp"
-            android:layout_height="256dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
-            android:contentDescription="@string/cd_logo"
-            android:transitionName="transition_logo"
-            app:srcCompat="@drawable/icon_logo_512"
-            app:layout_constraintVertical_bias="0.31"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
