--- a/v0/app/src/main/res/layout/fragment_results.xml
+++ b/v0/app/src/main/res/layout/fragment_results.xml
@@ -5,32 +5,34 @@
                                                    android:id="@+id/container_fragment"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
-                                                   tools:context=".ui.session.setup.ResultsFragment">
+                                                   tools:context=".ui.session.setup.ResultFragment">
 
     <TextView
             android:id="@+id/label_results"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="32dp"
             android:layout_marginStart="32dp"
             android:textSize="28sp"
             android:textAlignment="center"
             android:textAllCaps="false"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
             android:id="@+id/label_ready"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
             android:layout_marginStart="32dp"
             android:textSize="28sp"
             android:textAlignment="center"
             android:text="@string/label_ready_journey"
+            android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@+id/label_results"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
