--- a/v0/app/src/main/res/layout/activity_login.xml
+++ b/v0/app/src/main/res/layout/activity_login.xml
@@ -95,7 +95,7 @@
 
         <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_sign_up"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
