--- a/v0/app/src/main/res/layout/activity_main.xml
+++ b/v0/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
             android:fitsSystemWindows="true"
             android:layout_gravity="start"
             android:visibility="visible"
-            app:headerLayout="@layout/nav_header_home" app:menu="@menu/activity_home_drawer" />
+            app:headerLayout="@layout/nav_header_home"
+            app:menu="@menu/activity_home_drawer" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
