--- a/v0/app/src/main/res/layout/fragment_splash.xml
+++ b/v0/app/src/main/res/layout/fragment_splash.xml
@@ -5,7 +5,24 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.SplashScreenActivity">
+        tools:context=".ui.SplashFragment">
+
+    <ImageView
+            android:id="@+id/logo_splash"
+            android:layout_width="256dp"
+            android:layout_height="256dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
+            android:contentDescription="@string/cd_logo"
+            android:transitionName="transition_logo_splash"
+            app:srcCompat="@drawable/icon_logo_512"
+            app:layout_constraintVertical_bias="0.31"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     <TextView
             android:id="@+id/label_app"
@@ -19,22 +36,5 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-            android:id="@+id/logo_splash"
-            android:layout_width="256dp"
-            android:layout_height="256dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
-            android:contentDescription="@string/cd_logo"
-            android:transitionName="transition_logo"
-            app:srcCompat="@drawable/icon_logo_512"
-            app:layout_constraintVertical_bias="0.31"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
