--- a/v0/app/src/main/res/layout/fragment_start.xml
+++ b/v0/app/src/main/res/layout/fragment_start.xml
@@ -19,16 +19,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/textView2" />
+            app:layout_constraintBottom_toTopOf="@+id/label_start" />
 
     <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
+            android:id="@+id/label_start"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="32dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="32dp"
             android:text="@string/message_journey_start"
             android:textSize="32sp"
             android:textColor="@color/secondary_text"
@@ -40,16 +40,23 @@
             app:layout_constraintBottom_toBottomOf="parent" />
 
     <ubb.license.david.monumentalv0.ui.FlatButton
-            android:id="@+id/button_start"
+            android:id="@+id/button_start_new"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="visible"
-            app:text="@string/ready"
-            android:transitionName="bottomButtonTransition"
+            app:text="@string/start"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintEnd_toEndOf="parent" />
 
-    </ubb.license.david.monumentalv0.ui.FlatButton>
+    <ubb.license.david.monumentalv0.ui.FlatButton
+            android:id="@+id/button_resume"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:invertColors="true"
+            app:text="@string/resume"
+            app:layout_constraintBottom_toTopOf="@+id/button_start_new"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
