--- a/v0/app/src/main/res/layout/progress_overlay.xml
+++ b/v0/app/src/main/res/layout/progress_overlay.xml
@@ -23,11 +23,11 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/textView"
+            app:layout_constraintBottom_toTopOf="@+id/label_header_email"
             app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
-            android:id="@+id/textView"
+            android:id="@+id/label_header_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
