--- a/v0/app/src/main/res/layout/fragment_navigation.xml
+++ b/v0/app/src/main/res/layout/fragment_navigation.xml
@@ -7,18 +7,12 @@
         android:layout_height="match_parent"
         tools:context=".ui.session.tracking.NavigationFragment">
 
-    <TextView
-            android:id="@+id/label_output_navigation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
-            android:text="@string/hello_blank_fragment"
+    <com.google.android.gms.maps.MapView
+            android:id="@+id/fences_view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
