--- a/Final/presentation/src/main/res/layout/fragment_navigation.xml
+++ b/Final/presentation/src/main/res/layout/fragment_navigation.xml
@@ -7,12 +7,18 @@
         android:layout_height="match_parent"
         tools:context=".presentation.session.tracking.NavigationFragment">
 
-    <com.google.android.gms.maps.MapView
-            android:id="@+id/fences_view"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintEnd_toEndOf="parent"
+    <ImageView
+            android:id="@+id/navigation_arrow"
+            android:layout_width="256dp"
+            android:layout_height="256dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:src="@drawable/navigation_arrow"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:contentDescription="@string/nav_arrow" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
