--- a/Final/presentation/src/main/res/navigation/nav_home.xml
+++ b/Final/presentation/src/main/res/navigation/nav_home.xml
@@ -7,7 +7,7 @@
 
     <fragment
             android:id="@+id/startDestination"
-            android:name="ubb.thesis.david.monumental.presentation.session.setup.StartFragment"
+            android:name="ubb.thesis.david.monumental.session.setup.StartFragment"
             android:label="fragment_home_start"
             tools:layout="@layout/fragment_start" >
         <action
@@ -29,7 +29,7 @@
     </fragment>
     <fragment
             android:id="@+id/detailsDestination"
-            android:name="ubb.thesis.david.monumental.presentation.session.setup.DetailsFragment"
+            android:name="ubb.thesis.david.monumental.session.setup.DetailsFragment"
             android:label="fragment_radius"
             tools:layout="@layout/fragment_details" >
         <action
@@ -42,7 +42,7 @@
     </fragment>
     <fragment
             android:id="@+id/categoriesFragment"
-            android:name="ubb.thesis.david.monumental.presentation.session.setup.CategoriesFragment"
+            android:name="ubb.thesis.david.monumental.session.setup.CategoriesFragment"
             android:label="fragment_categories"
             tools:layout="@layout/fragment_categories" >
         <argument
@@ -66,7 +66,7 @@
     </fragment>
     <fragment
             android:id="@+id/landmarkResultsFragment"
-            android:name="ubb.thesis.david.monumental.presentation.session.setup.ResultFragment"
+            android:name="ubb.thesis.david.monumental.session.setup.ResultFragment"
             android:label="fragment_landmark_results"
             tools:layout="@layout/fragment_results" >
         <argument
@@ -97,12 +97,12 @@
     </fragment>
     <fragment
             android:id="@+id/navigationDestination"
-            android:name="ubb.thesis.david.monumental.presentation.session.tracking.NavigationFragment"
+            android:name="ubb.thesis.david.monumental.session.tracking.NavigationFragment"
             android:label="fragment_navigation"
             tools:layout="@layout/fragment_navigation" />
     <fragment
             android:id="@+id/loginDestination"
-            android:name="ubb.thesis.david.monumental.presentation.LoginFragment"
+            android:name="ubb.thesis.david.monumental.LoginFragment"
             android:label="LoginFragment"
             tools:layout="@layout/fragment_login" >
         <action
@@ -117,7 +117,7 @@
     </fragment>
     <fragment
             android:id="@+id/splashFragment"
-            android:name="ubb.thesis.david.monumental.presentation.SplashFragment"
+            android:name="ubb.thesis.david.monumental.SplashFragment"
             android:label="fragment_splash"
             tools:layout="@layout/fragment_splash" >
         <action
