--- a/Final/presentation/src/main/res/layout/fragment_start.xml
+++ b/Final/presentation/src/main/res/layout/fragment_start.xml
@@ -90,5 +90,19 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
+        <Button
+                android:id="@+id/notification_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="8dp"
+                android:text="Lightswitch"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/button_resume"
+                app:layout_constraintTop_toBottomOf="@+id/label_start" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
