--- a/Final/presentation/src/main/res/layout/fragment_snapshot.xml
+++ b/Final/presentation/src/main/res/layout/fragment_snapshot.xml
@@ -7,18 +7,39 @@
         android:layout_height="match_parent"
         tools:context=".session.tracking.SnapshotFragment">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:text="Hey, this is the camera fragment"
-            app:layout_constraintBottom_toBottomOf="parent"
+    <ImageView
+            android:id="@+id/photo_preview"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="32dp"
+            android:layout_marginStart="32dp"
+            android:src="@drawable/landmark_placeholder"
+            android:background="@drawable/border_default"
+            android:padding="24dp"
+            android:contentDescription="@string/cd_photo_preview"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/button_accept_photo" />
+
+    <ubb.thesis.david.monumental.common.FlatButton
+            android:id="@+id/button_accept_photo"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:text="@string/label_accept_photo"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/button_take_photo"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    <ubb.thesis.david.monumental.common.FlatButton
+            android:id="@+id/button_take_photo"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:text="@string/label_capture_landmark"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
