Implemented landmark filtering and detection + Reorganized files

--- a/Final/presentation/src/main/res/layout/fragment_details.xml
+++ b/Final/presentation/src/main/res/layout/fragment_details.xml
@@ -6,7 +6,7 @@
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:weightSum="2"
-              tools:context=".session.setup.DetailsFragment">
+              tools:context=".view.setup.DetailsFragment">
 
     <com.google.android.gms.maps.MapView
             android:id="@+id/mapView"
