--- a/Final/presentation/src/main/res/layout/fragment_categories.xml
+++ b/Final/presentation/src/main/res/layout/fragment_categories.xml
@@ -5,7 +5,7 @@
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
                                                    android:orientation="vertical"
-                                                   tools:context=".session.setup.CategoriesFragment">
+                                                   tools:context=".view.setup.CategoriesFragment">
 
     <TextView
             android:id="@+id/textView5"
