--- a/Final/presentation/src/main/res/layout/fragment_snapshot.xml
+++ b/Final/presentation/src/main/res/layout/fragment_snapshot.xml
@@ -3,9 +3,10 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".session.tracking.SnapshotFragment">
+        tools:context=".view.session.SnapshotFragment">
 
     <ImageView
             android:id="@+id/photo_preview"
